<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/taxi_item_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/content_description_taxi_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_taxi_2_logo" />

        <TextView
            android:id="@+id/taxi_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/taxi_item_image_view"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size"
            tools:text="@string/tools_taxi_item_name" />

        <TextView
            android:id="@+id/taxi_item_eta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:text="@string/tools_taxi_item_eta" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>